--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -51,6 +51,10 @@ median(totalSteps$steps)
 tm <- tapply(activity$steps, activity$interval, mean, na.rm = TRUE)
 plot(row.names(tm), tm, type = "l", main = "Average Daily Activity Pattern", xlab = "5-min interval", ylab = "Average across all Days", col = "grey")
 ```
+###2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+names(which.max(tm))
+```
 
 ## Imputing missing values
 ###1. Calculate and report the total number of missing values in the dataset
